--- a/public/form.html
+++ b/public/form.html
@@ -235,8 +235,7 @@
         <select name="select" id="select-tag">
           
         </select>
-        <button id="add-btn" type="button">Save Current Timetable</button>
-        <button onclick="window.location.href='/admin/form'" type="button" style="background: #007bff;">Add New Lecture</button>
+        <button onclick="window.location.href='/addLecture.html'" type="button" style="background: #007bff;">Add New Lecture</button>
       </div>
       <table>
         <thead>
