--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@ cretate<!DOCTYPE html>
           placeholder="Enter your password"
         />
         <button id="btn">Submit</button>
-      </div>a
+      </div>
     </div>
 
     <script src="./js/index.js"></script>
